# bugs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
benches/: bug_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: limited_resource_environment.rs
lib/: Cargo.toml
lib/benches/: bug_benchmark.rs
lib/src/: brain.rs  bug.rs  chromo_utils.rs  chunk.rs  color.rs  env_presets.rs  environment.rs  food_source.rs  lib.rs  utils.rs
lib/src/math/: angle.rs  complex.rs  lerp.rs  matrix.rs  misc.rs  mod.rs  noneg.rs  point.rs  rect.rs  size.rs  traits.rs  vector.rs
simulator/: Cargo.toml
simulator/src/: env_presets.rs  main.rs
src/: app_utils.rs  brain.rs  bug.rs  chromo_utils.rs  draw.rs  environment.rs  lib.rs  main.rs  main.slint  range.rs  time_point.rs  utils.rs
src/math/: angle.rs  complex.rs  matrix.rs  misc.rs  mod.rs  noneg.rs  point.rs  rect.rs  size.rs  traits.rs  vector.rs
src/render/: brain_render_model.rs  camera.rs  environment_render_model.rs  mod.rs  render_model.rs  render_scene.rs
src/render/opengl/: brain_render_model.rs  environment_render_model.rs
src/render/sdl/: brain_render_model.rs  convertions.rs  draw.rs  environment_render_model.rs  mod.rs
src/render/vulkan/: brain_render_model.rs  environment_render_model.rs  glsl_convertions.rs  mod.rs
