[package]
name = "bugs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromosome = "0.1.0"
sdl2 = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
simple_neural_net = { git = "https://github.com/burbokop/simple_neural_net.git" }
complexible = "0.2.4"
