[workspace]
members = ["lib", "simulator", "fuzz"]

[package]
name = "bugs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromosome = "0.2.0"
sdl2 = { version = "0.37.0", features = ["gfx", "ttf"]}
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
simple_neural_net = { git = "https://github.com/burbokop/simple_neural_net.git" }
complexible = "0.2.4"
slint = "1.8.0"
font-loader = "0.11.0"
serde_json = "1.0"
bugs-lib = { path = "lib" }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"

[build-dependencies]
slint-build = "1.8.0"
