[package]
name = "bugs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromosome = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
simple_neural_net = { git = "https://github.com/burbokop/simple_neural_net.git" }
complexible = "0.2.4"

[dev-dependencies]
criterion = "0.5.1"
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
approx = "0.5.1"

[[bench]]
name = "bug_benchmark"
harness = false
