[package]
name = "bugs-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chromosome = "0.1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8"
simple_neural_net = { git = "https://github.com/burbokop/simple_neural_net.git" }
complexible = "0.2.4"
rand_pcg = { version = "0.3.1", features = ["serde1"] }

[dev-dependencies]
criterion = "0.5.1"
rand_seeder = "0.3.0"
approx = "0.5.1"

[[bench]]
name = "bug_benchmark"
harness = false
