[package]
name = "bugs-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chromosome = "0.3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.9.1"
simple_neural_net = { git = "https://github.com/burbokop/simple_neural_net.git" }
complexible = "0.2.4"
rand_pcg = { version = "0.9.0", features = ["serde"] }

[dev-dependencies]
criterion = "0.6.0"
rand_seeder = "0.4.0"
approx = "0.5.1"

[[bench]]
name = "bug_benchmark"
harness = false
