[package]
name = "bugs-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
chromosome = "0.1.0"
memory-stats = "1.0.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.38"
ctrlc = "3.4"

[dependencies.bugs-lib]
path = "../lib"
